fixed h1 margin on mobile

--- a/css/splash.css
+++ b/css/splash.css
@@ -37,7 +37,7 @@
 	z-index: 1003
 }
 
-.content-ctn h1{
+.splash__content h1{
     margin-bottom: 1rem;
 }
 
